tests/sksl/errors/UnsupportedGLSLIdentifiers.sksl
void fragcoord() { float x = gl_FragCoord.x; }
void fragcolor() { float r = gl_FragColor.r; }
